fixed scrollbar on event-display col, added fake db data for testing

--- a/client/stylesheets/eventsAroundMeStyles/mapStyles2.css
+++ b/client/stylesheets/eventsAroundMeStyles/mapStyles2.css
@@ -55,3 +55,7 @@
 	white-space: nowrap;
   	overflow: hidden;
 }
+
+.event-display-column{
+	overflow-y: scroll;
+}
